--- a/isma-versusfighting/pom.xml
+++ b/isma-versusfighting/pom.xml
@@ -72,4 +72,12 @@
     <!--
     | Build Settings
     -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
