--- a/isma-versusfighting/pom.xml
+++ b/isma-versusfighting/pom.xml
@@ -56,6 +56,10 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>slf4j-impl</artifactId>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework</groupId>-->
             <!--<artifactId>spring-core</artifactId>-->
