add sonar properties files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,12 @@
+# Some properties that will be inherited by the modules
+sonar.skipDesign=false
+sonar.sources=src/main/java
+sonar.binaries=target/classes
+
 # Root project information
 sonar.projectKey=org.isma.web.versusfighting
 sonar.projectName=isma-project-versusfighting
 sonar.projectVersion=0.1
-
-# Some properties that will be inherited by the modules
-sonar.sources=src/main/java
 
 # List of the module identifiers
 sonar.modules=isma-versusfighting
